# promptsafe_package

./: .gitignore  LICENSE  README.md
examples/: node_example.js  python_example.py
npm/: package.json
npm/src/: detector.js  index.js  logger.js  patterns.json
npm/test/: test.js
python/: pyproject.toml
python/promptsafe/: __init__.py  cli.py  detector.py  logger.py  patterns.json
