[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptsafe"
version = "1.0.1"
description = "Lightweight AI prompt injection and system prompt leakage shield for LLM apps. Zero dependencies, works offline."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "PromptSafe Contributors" }
]
keywords = [
  "prompt-injection", "llm-security", "ai-security",
  "jailbreak", "promptsafe", "openai", "chatgpt", "security", "nlp"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
promptsafe = "promptsafe.cli:main"

[project.urls]
Homepage = "https://github.com/chakravarthigit/promptsafe_package"
Repository = "https://github.com/chakravarthigit/promptsafe_package"
Issues = "https://github.com/chakravarthigit/promptsafe_package/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptsafe*"]

[tool.setuptools.package-data]
promptsafe = ["patterns.json"]
